# -*- coding: utf-8 -*-
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([Fluxbox Menu Editor], [1.1.3], [http://fme.rhymux.info/bugtracker/])
AM_INIT_AUTOMAKE([fme], [1.1.3])
AC_CONFIG_SRCDIR([src/main.cc])
AC_CONFIG_HEADER([include/config.hpp])

# Checks for programs.
AC_GNU_SOURCE
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S

AC_CHECK_PROG(BC, [bc], [yes])
if ( test -z $BC )
then
	AC_MSG_ERROR([** cannot find bc in the path. Get it from http://www.gnu.org/software/bc/ **])
fi

AC_CHECK_PROG(FLUXBOX, [fluxbox], [yes])
if ( test -z $FLUXBOX )
then
	AC_MSG_ERROR([** cannot find fluxbox in the path. Get it from www.fluxbox.org **])
else
	ver=$(fluxbox -v | awk '{ print $2 }')
	echo " * Version : $ver"
fi

# Checks for libraries.
ALL_LINGUAS="fr"
AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h. 
if test "x${prefix}" = "xNONE"; then
	PACKAGE_LOCALE_DIR="${ac_default_prefix}/${DATADIRNAME}/locale"
else
	PACKAGE_LOCALE_DIR="${prefix}/${DATADIRNAME}/locale"
fi

AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "$PACKAGE_LOCALE_DIR",
	[The directory in which locale data will be stored])

PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 glibmm-2.4 libglademm-2.4 gthread-2.0)
PKG_CHECK_MODULES(GLIBMM, glibmm-2.4 >= 2.14.0 , hasglibmmregex=yes, hasglibmmregex=no)
if test $hasglibmmregex = "yes" ; then
	AC_DEFINE_UNQUOTED(GLIBMM_REGEX, "1",
		[Glibmm regex])
fi

if test $hasglibmmregex = "no" ; then
	PKG_CHECK_MODULES(GLIBMM, glibmm-2.4)

	AC_CHECK_LIB(boost_regex-gcc, main,, [
		AC_CHECK_LIB(boost_regex, main,,
	AC_MSG_ERROR([** cannot find required boost_regex library. Get it from www.boost.org **]))
	])

	AC_CHECK_HEADERS(boost/regex.hpp, , [
		echo "######################"
		echo " Boost headers needed "
		echo "######################"
		exit 1
	])
fi

# Checks for header files.
AC_CHECK_HEADERS([libintl.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([setlocale])

AC_OUTPUT( [Makefile include/Makefile src/Makefile glade/Makefile intl/Makefile po/Makefile.in] )
